--- a/Portafolio/Portafolio/index.html
+++ b/Portafolio/Portafolio/index.html
@@ -46,6 +46,8 @@
                 <input type="submit" value="Enviar" class="button">
             </form>
         </section>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
     </main>
     
     <footer class="footer">
